2007-11-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* configure.in: We have a runtime check for Python 2.5. Do the same
	here by using AM_PATH_PYTHON(2.5)
	* src/plugins/TestcaseGenerator.py: finalize RelLib -> gen.lib
	transitition

2007-10-31  Jim Sack <jgsack@san.rr.com>
	* src/gen/db/dbdir.py bug #1331 write_lock_file() add mkdir if needed
	* src/gramps.py bug #1332 more gramps termination problems fixed
	* src/ArgHandler bug #1333 change remove to glob remove and rmdir
	*  (op cit) bug #1334 update module name and calling parm to import2
	*    and function name: s/export_data/write_gedcom_file/

2007-10-31  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_EventView.py: Add properties icon to column editor
	  menu entry - the other views use that too.

2007-10-31  Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: added capitalize() to months/days; dst()
	* src/plugins/holidays.xml: uses dst() Daylight Saving Time function

2007-10-31 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: use collapse family
	* src/Relationship.py: add collopse equal family

2007-10-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: added Peter Landgren's locale suggestions

2007-10-30 Gary Burton <gary.burton@zen.co.uk>
	* src/gen/lib/person.py: setting the death index wrongly.

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_fr.py: add test procedure
	* src/Relationship.py: generlize test procedure

2007-10-29 Gary Burton <gary.burton@zen.co.uk>
	* src/gen/lib/person.py: reset birth and death indexes after deleting
    an event. Fixes #1327

2007-10-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/holidays.xml: removed SDate: use offset instead

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
    * src/DbManager.py: issue #1325, localize last date of change

2007-10-28 Gary Burton <gary.burton@zen.co.uk>